--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="5dp"
     android:background="#BBF1F6F6"
     tools:context=".SplashActivity">
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="400dp"
-    android:layout_marginTop="100dp"
-    android:id="@+id/splash_image"
-    android:src="@drawable/splah"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-    <TextView
+        <ImageView
+            android:id="@+id/splash_image"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/splah" />
+
+        <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,4 +43,5 @@
         android:textColor="#fd5d2b"
         android:textSize="20sp"
         android:textStyle="italic" />
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
