--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="5dp"
     android:background="#BBF1F6F6"
-    tools:context=".SplashActivity">
+    tools:context=".Activities.SplashActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
