--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,22 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ProgressBar
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/appBar"
+        android:id="@+id/progressBarBannerDashboard"
+        android:visibility="visible"
+        android:layout_marginTop="70dp"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_below="@id/appBar"
-        android:id="@+id/recyclerViewBanner"/>
+        android:id="@+id/recyclerViewBanner">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
