--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,15 +26,13 @@
         android:id="@+id/recyclerViewBanner"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:layout_below="@id/appBar"
-        android:layout_marginTop="-2dp" />
+        android:layout_below="@id/appBar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/recyclerViewBanner"
-        android:layout_marginTop="1dp" />
+        android:layout_below="@id/recyclerViewBanner" />
 
 
 </RelativeLayout>
