--- a/app/src/main/res/layout/banner_images_view.xml
+++ b/app/src/main/res/layout/banner_images_view.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:padding="10dp"
-        android:layout_margin="10dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:elevation="10dp"
         app:cardCornerRadius="15dp">
         <ImageView
