--- a/app/src/main/res/layout/dashboard_content.xml
+++ b/app/src/main/res/layout/dashboard_content.xml
@@ -7,8 +7,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:elevation="10dp"
         app:cardCornerRadius="15dp">
 
@@ -30,7 +31,7 @@
                 <TextView
                     android:id="@+id/content_textView"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
+                    android:layout_height="40dp"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="TITLE"
