--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,14 +6,9 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     tools:context=".Activities.LoginActivity">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:background="@drawable/splah"
             android:id="@+id/image"
             />
@@ -22,7 +17,8 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginTop="5dp"
-            android:text="Welcome in LoginActivity"
+            android:layout_below="@id/image"
+            android:text="Welcome to Login"
             android:fontFamily="@font/aclonica"
             android:textColor="#058971"
             android:id="@+id/text1"/>
@@ -30,44 +26,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:layout_below="@id/text1"
             android:layout_marginTop="5dp"
-            android:text="Sigin in to countinue"
+            android:text="Sign In to Continue"
             android:fontFamily="@font/aclonica"
             android:textColor="#fd5d2b"
             android:id="@+id/text2"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            android:layout_marginBottom="20dp">
 
             <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#F4F0EF"
-                android:hint="Email_Id"
-                android:textColorHint="#000"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/text2"
+                android:hint="Enter Email_Id"
+                android:textColorHint="#B1B1B1"
                 android:textSize="25sp" />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="Enter Password"
                 android:layout_marginTop="10dp"
                 android:id="@+id/password"
                 android:textSize="25sp"
                 android:inputType="textPassword"
+                android:layout_below="@id/email"
                 android:background= "#F4F0EF"
-                android:textColorHint="#000"/>
+                android:textColorHint="#B1B1B1"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
-                android:text="Forget Password"
+                android:textSize="14sp"
+                android:text="Forgot Password ?"
                 android:id="@+id/forget"
-                android:layout_gravity="right"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/password"
                 android:textStyle="bold"
                 android:layout_marginTop="10dp"/>
 
@@ -77,35 +71,33 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/a"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:text="Login"
+                android:layout_below="@id/forget"
                 android:id="@+id/login"
                 android:fontFamily="@font/aclonica"
                 android:textColor="#058971"
-                android:textSize="25sp"/>
+                android:textSize="20sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="New User Create Account ?Register Here"
+                android:text="New User ? Create an Account"
                 android:textSize="15sp"
                 android:id="@+id/siginup"
+                android:layout_below="@id/login"
                 android:fontFamily="@font/aclonica"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:textColor="#fd5d2b"/>
 
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
               android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:visibility="gone"
                 android:id="@+id/progresbar"
                 />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 
 </RelativeLayout>
