--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:layout_marginTop="5dp"
-            android:text="Welcome in RegisterActivity"
+            android:text="Welcome to Registration"
             android:fontFamily="@font/aclonica"
             android:textColor="#058971"
             android:id="@+id/text1"/>
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_marginTop="5dp"
-            android:text="SiginUp to Start"
+            android:text="SignUp to Start"
             android:fontFamily="@font/aclonica"
             android:textColor="#fd5d2b"
             android:id="@+id/text2"/>
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:background="#F4F0EF"
                 android:hint="Username"
-                android:textColorHint="#000"
+                android:textColorHint="#B1B1B1"
                 android:textSize="25sp" />
             <EditText
                 android:id="@+id/email"
@@ -58,7 +58,7 @@
                 android:background="#F4F0EF"
                 android:layout_marginTop="10dp"
                 android:hint="Email_Id"
-                android:textColorHint="#000"
+                android:textColorHint="#B1B1B1"
                 android:textSize="25sp" />
             <EditText
                 android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                 android:textSize="25sp"
                 android:inputType="textPassword"
                 android:background= "#F4F0EF"
-                android:textColorHint="#000"/>
+                android:textColorHint="#B1B1B1"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
                 android:id="@+id/phone"
                 android:textSize="25sp"
                 android:background= "#F4F0EF"
-                android:textColorHint="#000"/>
+                android:textColorHint="#B1B1B1"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,8 +93,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Already Have an Account ?Login"
-                android:textSize="15sp"
+                android:text="Already Have an Account ? Login Here"
+                android:textSize="13sp"
                 android:textAlignment="center"
                 android:id="@+id/textLogin"
                 android:fontFamily="@font/aclonica"
