--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/splah"
             android:id="@+id/image"
             />
@@ -94,9 +95,10 @@
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-              android:layout_gravity="center"
+                android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:visibility="gone"
+                android:layout_centerInParent="true"
                 android:id="@+id/progresbar"
                 />
 
