--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,6 +15,7 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/splah"
             android:id="@+id/image"
             />
@@ -102,19 +103,18 @@
                 android:layout_marginTop="10dp"
                 android:textColor="#fd5d2b"/>
 
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"
-                android:id="@+id/progresbar"
-                />
 
         </LinearLayout>
 
-
-
-
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:id="@+id/progresbar"
+        />
 </RelativeLayout>
