--- a/app/src/main/res/layout/dashboard_content.xml
+++ b/app/src/main/res/layout/dashboard_content.xml
@@ -39,6 +39,17 @@
                     android:textSize="30sp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/textViewOptions"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="5dp"
+                android:paddingBottom="5dp"
+                android:text="&#8942;"
+                android:textAppearance="?android:textAppearanceLarge" />
             <ProgressBar
             android:layout_width="40dp"
             android:layout_height="40dp"
