--- a/app/src/main/res/layout/dashboard_content.xml
+++ b/app/src/main/res/layout/dashboard_content.xml
@@ -11,7 +11,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:elevation="10dp"
-        app:cardCornerRadius="15dp">
+        app:contentPaddingBottom="10dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,7 +21,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
@@ -42,12 +44,12 @@
 
             <TextView
                 android:id="@+id/textViewOptions"
-                android:layout_width="10dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="5dp"
-                android:paddingBottom="5dp"
+                android:paddingBottom="4dp"
+                android:gravity="center"
                 android:text="&#8942;"
                 android:textAppearance="?android:textAppearanceLarge" />
             <ProgressBar
