--- a/app/src/main/res/layout/activity_zeroto_nine.xml
+++ b/app/src/main/res/layout/activity_zeroto_nine.xml
@@ -3,13 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-    tools:context=".Activities.MathsActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Activities.ZerotoNineActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,25 +21,12 @@
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
-  <!-- <GridView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
 
-        android:columnWidth="100dp"
-        android:numColumns="2"
-        android:id="@+id/gridview"
-        ></GridView>
--->
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:background="@drawable/boder"
-        android:id="@+id/recyclerview"/>
-</LinearLayout>
-
+        android:layout_below="@id/appBar"
+        android:layout_height="match_parent"
+        android:id="@+id/viewPagerNumbers"/>
 
 
 </RelativeLayout>
