--- a/app/src/main/res/layout/item_english.xml
+++ b/app/src/main/res/layout/item_english.xml
@@ -15,9 +15,9 @@
             <ImageView
                 android:id="@+id/imageEnglish"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="678dp"
                 android:layout_above="@id/buttonPlay"
-                android:layout_marginBottom="-7dp" />
+                android:layout_marginBottom="-2dp" />
 
             <TextView
                 android:id="@+id/textCaptialA"
@@ -65,13 +65,14 @@
 
             <Button
                 android:id="@+id/buttonPlay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="42dp"
+                android:layout_height="47dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:text="PLAY" />
-
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/mic" />
         </RelativeLayout>
     </FrameLayout>
 
