--- a/app/src/main/res/layout/activity_english.xml
+++ b/app/src/main/res/layout/activity_english.xml
@@ -22,11 +22,30 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPagerEnglish"
         android:layout_width="match_parent"
-        android:layout_below="@id/appBar"
-        android:layout_height="match_parent"
-        android:id="@+id/viewPagerEnglish"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appBar" />
 
+    <Button
+        android:id="@+id/prevButton"
+        android:layout_width="78dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/previous" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="52dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/next" />
 
 
 </RelativeLayout>
