--- a/app/src/main/res/layout/item_numbers.xml
+++ b/app/src/main/res/layout/item_numbers.xml
@@ -54,12 +54,14 @@
 
             <Button
                 android:id="@+id/buttonPlay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="42dp"
+                android:layout_height="48dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:text="PLAY" />
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/mic" />
 
         </RelativeLayout>
     </FrameLayout>
